// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`x-topic-search given all topics include search term are followed should render followed topics name list 1`] = `
<div
  class="n-ui-hide-core TopicSearch_container__2VM2e"
>
  <h2
    class="o-normalise-visually-hidden"
  >
    Search for topics, authors, companies, or other areas of interest
  </h2>
  <label
    class="o-normalise-visually-hidden"
    for="topic-search-input"
  >
    Search and add topics
  </label>
  <div
    class="TopicSearch_input-wrapper__VeoLf"
  >
    <i
      class="TopicSearch_search-icon__2proG"
    />
    <input
      class="TopicSearch_input__1Iq7K"
      data-trackable="topic-search"
      id="topic-search-input"
      placeholder="Search and add topics"
      type="search"
    />
  </div>
  <div
    class="n-ui-hide-core TopicSearch_result-container__34uXy"
    data-component="topic-search"
  >
    <div
      aria-live="polite"
      class="TopicSearch_all-followed__wgnv9"
    >
      You already follow 
      <span>
        <b>
          abcc
        </b>
         
      </span>
      <span>
        and 
        <b>
          abccd
        </b>
      </span>
    </div>
  </div>
</div>
`;

exports[`x-topic-search given there are unfollowed topics include search term should render the unfollowed topics list with x-follow-button 1`] = `
<div
  class="n-ui-hide-core TopicSearch_container__2VM2e"
>
  <h2
    class="o-normalise-visually-hidden"
  >
    Search for topics, authors, companies, or other areas of interest
  </h2>
  <label
    class="o-normalise-visually-hidden"
    for="topic-search-input"
  >
    Search and add topics
  </label>
  <div
    class="TopicSearch_input-wrapper__VeoLf"
  >
    <i
      class="TopicSearch_search-icon__2proG"
    />
    <input
      class="TopicSearch_input__1Iq7K"
      data-trackable="topic-search"
      id="topic-search-input"
      placeholder="Search and add topics"
      type="search"
    />
  </div>
  <div
    class="n-ui-hide-core TopicSearch_result-container__34uXy"
    data-component="topic-search"
  >
    <ul
      aria-live="polite"
      class="TopicSearch_suggestions__2dZFW"
    >
      <li
        class="TopicSearch_suggestion__2z7vY"
        data-concept-id="TOPIC-1__id"
        data-trackable="myft-topic"
        data-trackable-meta="{\\"search-term\\":\\"abc\\"}"
      >
        <a
          class="TopicSearch_suggestion__name__3rwG-"
          data-trackable="topic-link"
          href="TOPIC-1__url"
        >
          TOPIC-1__name
        </a>
        <form
          action="/__myft/api/core/followed/concept/TOPIC-1__id?method=put"
          data-concept-id="TOPIC-1__id"
          data-myft-ui="follow"
          method="GET"
        >
          <input
            data-myft-csrf-token="true"
            name="token"
            type="hidden"
            value=""
          />
          <button
            aria-label="Add TOPIC-1__name to MyFT"
            aria-pressed="false"
            class="main_button__3Mk67 undefined"
            data-alternate-label="Remove TOPIC-1__name from MyFT"
            data-alternate-text="Added"
            data-concept-id="TOPIC-1__id"
            data-trackable="follow"
            title="Add TOPIC-1__name to MyFT"
            type="submit"
          >
            Add to myFT
          </button>
        </form>
      </li>
      <li
        class="TopicSearch_suggestion__2z7vY"
        data-concept-id="TOPIC-2__id"
        data-trackable="myft-topic"
        data-trackable-meta="{\\"search-term\\":\\"abc\\"}"
      >
        <a
          class="TopicSearch_suggestion__name__3rwG-"
          data-trackable="topic-link"
          href="TOPIC-2__url"
        >
          TOPIC-2__name
        </a>
        <form
          action="/__myft/api/core/followed/concept/TOPIC-2__id?method=put"
          data-concept-id="TOPIC-2__id"
          data-myft-ui="follow"
          method="GET"
        >
          <input
            data-myft-csrf-token="true"
            name="token"
            type="hidden"
            value=""
          />
          <button
            aria-label="Add TOPIC-2__name to MyFT"
            aria-pressed="false"
            class="main_button__3Mk67 undefined"
            data-alternate-label="Remove TOPIC-2__name from MyFT"
            data-alternate-text="Added"
            data-concept-id="TOPIC-2__id"
            data-trackable="follow"
            title="Add TOPIC-2__name to MyFT"
            type="submit"
          >
            Add to myFT
          </button>
        </form>
      </li>
    </ul>
  </div>
</div>
`;

exports[`x-topic-search given there is no topics include search term exist should render no topics message 1`] = `
<div
  class="n-ui-hide-core TopicSearch_container__2VM2e"
>
  <h2
    class="o-normalise-visually-hidden"
  >
    Search for topics, authors, companies, or other areas of interest
  </h2>
  <label
    class="o-normalise-visually-hidden"
    for="topic-search-input"
  >
    Search and add topics
  </label>
  <div
    class="TopicSearch_input-wrapper__VeoLf"
  >
    <i
      class="TopicSearch_search-icon__2proG"
    />
    <input
      class="TopicSearch_input__1Iq7K"
      data-trackable="topic-search"
      id="topic-search-input"
      placeholder="Search and add topics"
      type="search"
    />
  </div>
</div>
`;
